Bug 312747 - KDE file open dialog truncates showing of file/folder names
Summary: KDE file open dialog truncates showing of file/folder names
Status: RESOLVED FIXED
Alias: None
Product: kfile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.9.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-06 13:53 UTC by Greg Lepore
Modified: 2016-11-12 18:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Truncated file open folder and file names (101.19 KB, image/jpeg)
2013-01-06 13:54 UTC, Greg Lepore
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Greg Lepore 2013-01-06 13:53:42 UTC
Opening a KDE file dialog (for example, from Kate) to a set of directories and files which have short names properly displays all of the data (Name, Size, Date), showing all characters of the file and folder names.  Navigating from that initial folder to a different folder with longer file and folder names does not resize the Name, Size and Date columns to fully show all file and folder names, resulting in truncated views of the data.

Reproducible: Always

Steps to Reproduce:
1. Launch an open file dialog to a folder with only short file and folder names, they are properly displayed
2. Navigate to a set of folders and files with longer names, they are truncated to the width of the original file and folder names
3.
Actual Results:  
File and folder names for the second directory are truncated

Expected Results:  
Column widths should resize to file the allowed space, or to show as much of the file and folder names as possible
Comment 1 Greg Lepore 2013-01-06 13:54:11 UTC
Created attachment 76243 [details]
Truncated file open folder and file names
Comment 2 Michael D 2016-03-23 09:01:47 UTC
This very annoying bug is still present in the latest KF5. Also, column width in detailed view is not remembered. Even better than remembering, column width should be *automatic*, like in Dolphin, so that the user doesn't have to worry about adjusting column width all the time.
Comment 3 Andreas Hartmetz 2016-11-12 18:22:08 UTC
Git commit 9a997fba312f4d9596cc880685ec1e28deb7a665 by Andreas Hartmetz.
Committed on 12/11/2016 at 18:19.
Pushed by ahartmetz into branch 'master'.

Never stretch the last (=date) column in the file dialog.

Stretching the date column makes it appear to need the excessive
width when adding up non-name column widths in expandNameColumn().
The name column consequently became too narrow.
Now why could the date column expand if the names needed a lot of
space? It probably has something to do with expandNameColumn()
being called several times while the directory model is loading
and the exact order in which things are updated. Needs a more
detailed analysis if this change causes a regression or still
doesn't completely fix the problem.

M  +1    -2    src/filewidgets/kdiroperatordetailview.cpp

http://commits.kde.org/kio/9a997fba312f4d9596cc880685ec1e28deb7a665
Comment 4 Andreas Hartmetz 2016-11-12 18:35:05 UTC
The fix was more about the name column being too narrow even when just opening one folder. By giving the other columns just their required widths and the rest to the name column, the name column automatically gets the maximum possible width, which kind of fixes this bug as a side effect.
The interactions are pretty complicated so I've only pushed the change to master where it can get some testing and possibly further fixes.